// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`channel list actions creates CHANNELS_ERROR when fetching channels has been rejected 1`] = `
Array [
  Object {
    "type": "REQUEST_CHANNELS",
  },
  Object {
    "type": "CHANNELS_ERROR",
  },
]
`;

exports[`channel list actions creates CHANNELS_ERROR when fetching subscriptions has been rejected 1`] = `
Array [
  Object {
    "type": "REQUEST_CHANNELS",
  },
  Object {
    "type": "CHANNELS_ERROR",
  },
]
`;

exports[`channel list actions creates RECEIVE_CHANNELS when fetching channels has been resolved 1`] = `
Array [
  Object {
    "type": "REQUEST_CHANNELS",
  },
  Object {
    "payload": Array [
      "DevTips",
      "Fun Fun Function",
    ],
    "type": "RECEIVE_CHANNELS",
  },
]
`;

exports[`channel list actions creates RECEIVE_CHANNELS when fetching subscriptions has resolved with null 1`] = `
Array [
  Object {
    "type": "REQUEST_CHANNELS",
  },
  Object {
    "payload": Array [],
    "type": "RECEIVE_CHANNELS",
  },
]
`;

exports[`channel list actions creates RECEIVE_CHANNELS when fetching subscriptions has resolved with undefined 1`] = `
Array [
  Object {
    "type": "REQUEST_CHANNELS",
  },
  Object {
    "payload": Array [],
    "type": "RECEIVE_CHANNELS",
  },
]
`;

exports[`channel list actions should create an action to handle an error 1`] = `
Object {
  "type": "CHANNELS_ERROR",
}
`;

exports[`channel list actions should create an action to receive channels 1`] = `
Object {
  "payload": Object {
    "items": Array [
      "DevTips",
      "Fun Fun Function",
    ],
  },
  "type": "RECEIVE_CHANNELS",
}
`;

exports[`channel list actions should create an action to request channels 1`] = `
Object {
  "type": "REQUEST_CHANNELS",
}
`;
